--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=RatingService
 server.port=8083
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/microservice
+spring.data.mongodb.database=microservice
+#debug=true
