--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8083
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/microservice
 spring.data.mongodb.database=microservice
 #debug=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
