--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.data.mongodb.database=microservice
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka
